cmake_minimum_required(VERSION 3.9)
project(Algorithms_and_data_structures)

set(CMAKE_CXX_STANDARD 17)



add_subdirectory(insertionsort)
add_subdirectory(bubblesort)
add_subdirectory(selectionsort)
add_subdirectory(quicksort)
add_subdirectory(mergesort)
add_subdirectory(heapsort)
add_subdirectory(countingsort)
add_subdirectory(utilities)
add_subdirectory(binarysearchtree)
add_subdirectory(chainedhasharray)
add_subdirectory(breadthfirstsearchforgraph)
add_subdirectory(depthfirstsearch)